--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    {{> head }}
-</head>
-<body>
+	<head>
+		{{> head }}
+	</head>
+	<body>
+		{{> header }} {{> body }} {{> footer }}
 
-    {{> header }}
-
-    {{> body }}
-
-    {{> footer }}
-
-    <script src="assets/js/app.js"></script>
-</body>
+		<script src="assets/js/app.js"></script>
+	</body>
 </html>
