--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -4,7 +4,12 @@
 		{{> head }}
 	</head>
 	<body>
-		{{> header }} {{> body }} {{> footer }}
+		
+		{{> header }} 
+		
+		{{> body }}
+		
+		{{> footer }}
 
 		<script src="assets/js/app.js"></script>
 	</body>
