--- a/src/assets/scss/vars/_mixins.scss
+++ b/src/assets/scss/vars/_mixins.scss
@@ -13,3 +13,19 @@
 		background-color: $main-color;
 	}
 }
+
+@mixin before_circle2 {
+	&:before {
+		content: '';
+		position: absolute;
+
+		width: 36px;
+		height: 36px;
+		border-radius: 100%;
+		top: -13%;
+		left: -70%;
+		z-index: -1;
+
+		background-color: $main-color;
+	}
+}
