--- a/src/assets/scss/blocks/_about.scss
+++ b/src/assets/scss/blocks/_about.scss
@@ -1,76 +1,78 @@
-.aboutme {
-	padding: 120px 0;
+.about {
+	padding-top: 120px;
 
 	&__wrapper {
-		display: flex;
+		display: grid;
+		grid-template-columns: 400px 670px;
+		grid-template-rows: minmax(245px, auto) minmax(255px, auto);
+		grid-auto-rows: minmax(245px, auto);
+		column-gap: 70px;
+		row-gap: 40px;
+	}
+	&__photo {
+		grid-row: 1/3;
+
+		img {
+			max-width: 100%;
+		}
 	}
 
-	&__content {
-		padding-left: 70px;
-	}
-}
-
-.content {
-	&__subtitle {
+	&__title {
 		position: relative;
-		padding-left: 13px;
-		font-weight: bold;
-		margin-bottom: 6px;
-		z-index: 2;
-
+		padding: 1px 0 0 12px;
 		@include before_circle;
 	}
 
-	&__title {
-		font-weight: bold;
-		margin-bottom: 4px;
+	&__description {
+		padding-top: 6px;
+
+		.divider {
+			margin: 0;
+		}
 	}
 
-	&__line {
-		margin-bottom: 20px;
+	&__text {
+		margin-top: 20px;
 
-		width: 60px;
-		height: 3px;
-		background-color: $main-color;
-	}
-
-	&__descr {
+		color: #000;
+		font-size: 14px;
+		font-style: normal;
 		font-weight: 500;
-
-		margin-bottom: 40px;
+		line-height: 21px;
 	}
 
-	&__items {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-		align-items: center;
-	}
-}
+	&__skills {
+		display: grid;
+		grid-template: repeat(2, minmax(115px, auto)) / repeat(2, 260px);
+		grid-auto-rows: 1fr;
+		column-gap: 50px;
+		row-gap: 20px;
 
-.item {
-	&__card {
-		width: 260px;
-		display: flex;
-		margin-bottom: 20px;
-	}
-}
+		&-item {
+			display: grid;
+			grid-template-columns: 40px 200px;
+			column-gap: 20px;
+		}
 
-.card {
-	&__logo {
-		position: relative;
-		margin-right: 20px;
+		&-circle {
+			position: relative;
+			padding: 15px 0 0 15px;
 
-		@include before_circle2;
-	}
-	&__title {
-		font-weight: bold;
+			@include before_circle;
 
-		margin-bottom: 6px;
-	}
+			&:before {
+				top: 0;
+			}
+		}
 
-	&__descr {
-		font-size: 12px;
-		font-weight: 500;
+		&-text {
+			margin-top: 6px;
+
+			color: #000;
+			font-size: 12px;
+			font-style: normal;
+			font-weight: 500;
+			line-height: normal;
+		}
 	}
 }
