--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -19,6 +19,15 @@
 	margin: 0 auto;
 }
 
+.divider {
+	margin: 25px auto 0 auto;
+
+	width: 60px;
+	height: 3px;
+
+	background-color: $main-color;
+}
+
 // Import Blocks
 
 @import 'blocks/promo';
@@ -27,3 +36,9 @@
 @import 'blocks/sidepanel';
 @import 'blocks/menu';
 @import 'blocks/about';
+@import 'blocks/resume';
+@import 'blocks/stack';
+@import 'blocks/progress';
+@import 'blocks/portfolio';
+@import 'blocks/price';
+@import 'blocks/contacts';
