--- a/src/assets/scss/vars/_mixins.scss
+++ b/src/assets/scss/vars/_mixins.scss
@@ -14,18 +14,21 @@
 	}
 }
 
-@mixin before_circle2 {
-	&:before {
-		content: '';
-		position: absolute;
+@mixin title {
+	&__section-title {
+		position: relative;
+		text-align: center;
 
-		width: 36px;
-		height: 36px;
-		border-radius: 100%;
-		top: -13%;
-		left: -70%;
-		z-index: -1;
+		@include before_circle;
 
-		background-color: $main-color;
+		&:before {
+			top: -6px;
+			left: 50%;
+			transform: translateX(-50%);
+		}
+	}
+
+	&__section-subtitle {
+		text-align: center;
 	}
 }
