--- a/src/assets/scss/blocks/_portfolio.scss
+++ b/src/assets/scss/blocks/_portfolio.scss
@@ -20,13 +20,11 @@
 	}
 
 	&__item {
+		transition: all 0.5s;
 		img {
 			width: 100%;
-			transition: all 0.5s;
-
-			&:hover {
-				transform: scale(1.05);
-			}
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 }
